EscapeDSL/src/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Parser/Parser.y
-----------------------------------------------------------------------------

state 51 contains 2 shift/reduce conflicts.
state 52 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseEscapeRoom -> GameDefinition           (0)
	GameDefinition -> Definition                       (1)
	GameDefinition -> GameDefinition Definition        (2)
	Definition -> game '{' Elements '}'                (3)
	Definition -> Type ident '{' Declarations '}'      (4)
	Type -> target                                     (5)
	Type -> object                                     (6)
	Declarations -> Declaration                        (7)
	Declarations -> Declarations Declaration           (8)
	Declaration -> unlock ':' number                   (9)
	Declaration -> elements '{' Elements '}'           (10)
	Declaration -> onuse '{' Sentences '}'             (11)
	Elements -> ident                                  (12)
	Elements -> Elements ',' Elements                  (13)
	Sentences -> Sentence                              (14)
	Sentences -> Sentences Sentence                    (15)
	Sentence -> if Status "->" Command                 (16)
	Sentence -> Command                                (17)
	Command -> show ShowMode                           (18)
	ShowMode -> ident                                  (19)
	ShowMode -> string                                 (20)
	Status -> locked                                   (21)
	Status -> unlocked                                 (22)
	Status -> ident is locked                          (23)
	Status -> ident is unlocked                        (24)
	Status -> Status and Status                        (25)
	Status -> Status or Status                         (26)
	Status -> '(' Status ')'                           (27)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	game           { TokenGame }
	target         { TokenTarget }
	object         { TokenObject }
	unlock         { TokenUnlock }
	elements       { TokenElements }
	onuse          { TokenOnUse }
	if             { TokenIf }
	show           { TokenShow }
	locked         { TokenLocked }
	unlocked       { TokenUnlocked }
	is             { TokenIs }
	and            { TokenAnd }
	or             { TokenOr }
	'{'            { TokenLBrace }
	'}'            { TokenRBrace }
	'('            { TokenLPar }
	')'            { TokenRPar }
	':'            { TokenColon }
	','            { TokenComma }
	"->"           { TokenArrow }
	ident          { TokenIdent $$ }
	number         { TokenNumber $$ }
	string         { TokenString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseEscapeRoom rule  0
	GameDefinition  rules 1, 2
	Definition      rules 3, 4
	Type            rules 5, 6
	Declarations    rules 7, 8
	Declaration     rules 9, 10, 11
	Elements        rules 12, 13
	Sentences       rules 14, 15
	Sentence        rules 16, 17
	Command         rule  18
	ShowMode        rules 19, 20
	Status          rules 21, 22, 23, 24, 25, 26, 27

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseEscapeRoom -> . GameDefinition          (rule 0)

	game           shift, and enter state 4
	target         shift, and enter state 5
	object         shift, and enter state 6

	GameDefinition goto state 7
	Definition     goto state 2
	Type           goto state 3

State 1

	GameDefinition -> . Definition                      (rule 1)

	game           shift, and enter state 4
	target         shift, and enter state 5
	object         shift, and enter state 6

	Definition     goto state 2
	Type           goto state 3

State 2

	GameDefinition -> Definition .                      (rule 1)

	game           reduce using rule 1
	target         reduce using rule 1
	object         reduce using rule 1
	%eof           reduce using rule 1


State 3

	Definition -> Type . ident '{' Declarations '}'     (rule 4)

	ident          shift, and enter state 10


State 4

	Definition -> game . '{' Elements '}'               (rule 3)

	'{'            shift, and enter state 9


State 5

	Type -> target .                                    (rule 5)

	ident          reduce using rule 5


State 6

	Type -> object .                                    (rule 6)

	ident          reduce using rule 6


State 7

	%start_parseEscapeRoom -> GameDefinition .          (rule 0)
	GameDefinition -> GameDefinition . Definition       (rule 2)

	game           shift, and enter state 4
	target         shift, and enter state 5
	object         shift, and enter state 6
	%eof           accept

	Definition     goto state 8
	Type           goto state 3

State 8

	GameDefinition -> GameDefinition Definition .       (rule 2)

	game           reduce using rule 2
	target         reduce using rule 2
	object         reduce using rule 2
	%eof           reduce using rule 2


State 9

	Definition -> game '{' . Elements '}'               (rule 3)

	ident          shift, and enter state 13

	Elements       goto state 12

State 10

	Definition -> Type ident . '{' Declarations '}'     (rule 4)

	'{'            shift, and enter state 11


State 11

	Definition -> Type ident '{' . Declarations '}'     (rule 4)

	unlock         shift, and enter state 18
	elements       shift, and enter state 19
	onuse          shift, and enter state 20

	Declarations   goto state 16
	Declaration    goto state 17

State 12

	Definition -> game '{' Elements . '}'               (rule 3)
	Elements -> Elements . ',' Elements                 (rule 13)

	'}'            shift, and enter state 14
	','            shift, and enter state 15


State 13

	Elements -> ident .                                 (rule 12)

	'}'            reduce using rule 12
	','            reduce using rule 12


State 14

	Definition -> game '{' Elements '}' .               (rule 3)

	game           reduce using rule 3
	target         reduce using rule 3
	object         reduce using rule 3
	%eof           reduce using rule 3


State 15

	Elements -> Elements ',' . Elements                 (rule 13)

	ident          shift, and enter state 13

	Elements       goto state 26

State 16

	Definition -> Type ident '{' Declarations . '}'     (rule 4)
	Declarations -> Declarations . Declaration          (rule 8)

	unlock         shift, and enter state 18
	elements       shift, and enter state 19
	onuse          shift, and enter state 20
	'}'            shift, and enter state 25

	Declaration    goto state 24

State 17

	Declarations -> Declaration .                       (rule 7)

	unlock         reduce using rule 7
	elements       reduce using rule 7
	onuse          reduce using rule 7
	'}'            reduce using rule 7


State 18

	Declaration -> unlock . ':' number                  (rule 9)

	':'            shift, and enter state 23


State 19

	Declaration -> elements . '{' Elements '}'          (rule 10)

	'{'            shift, and enter state 22


State 20

	Declaration -> onuse . '{' Sentences '}'            (rule 11)

	'{'            shift, and enter state 21


State 21

	Declaration -> onuse '{' . Sentences '}'            (rule 11)

	if             shift, and enter state 32
	show           shift, and enter state 33

	Sentences      goto state 29
	Sentence       goto state 30
	Command        goto state 31

State 22

	Declaration -> elements '{' . Elements '}'          (rule 10)

	ident          shift, and enter state 13

	Elements       goto state 28

State 23

	Declaration -> unlock ':' . number                  (rule 9)

	number         shift, and enter state 27


State 24

	Declarations -> Declarations Declaration .          (rule 8)

	unlock         reduce using rule 8
	elements       reduce using rule 8
	onuse          reduce using rule 8
	'}'            reduce using rule 8


State 25

	Definition -> Type ident '{' Declarations '}' .     (rule 4)

	game           reduce using rule 4
	target         reduce using rule 4
	object         reduce using rule 4
	%eof           reduce using rule 4


State 26

	Elements -> Elements . ',' Elements                 (rule 13)
	Elements -> Elements ',' Elements .                 (rule 13)

	'}'            reduce using rule 13
	','            reduce using rule 13


State 27

	Declaration -> unlock ':' number .                  (rule 9)

	unlock         reduce using rule 9
	elements       reduce using rule 9
	onuse          reduce using rule 9
	'}'            reduce using rule 9


State 28

	Declaration -> elements '{' Elements . '}'          (rule 10)
	Elements -> Elements . ',' Elements                 (rule 13)

	'}'            shift, and enter state 44
	','            shift, and enter state 15


State 29

	Declaration -> onuse '{' Sentences . '}'            (rule 11)
	Sentences -> Sentences . Sentence                   (rule 15)

	if             shift, and enter state 32
	show           shift, and enter state 33
	'}'            shift, and enter state 43

	Sentence       goto state 42
	Command        goto state 31

State 30

	Sentences -> Sentence .                             (rule 14)

	if             reduce using rule 14
	show           reduce using rule 14
	'}'            reduce using rule 14


State 31

	Sentence -> Command .                               (rule 17)

	if             reduce using rule 17
	show           reduce using rule 17
	'}'            reduce using rule 17


State 32

	Sentence -> if . Status "->" Command                (rule 16)

	locked         shift, and enter state 38
	unlocked       shift, and enter state 39
	'('            shift, and enter state 40
	ident          shift, and enter state 41

	Status         goto state 37

State 33

	Command -> show . ShowMode                          (rule 18)

	ident          shift, and enter state 35
	string         shift, and enter state 36

	ShowMode       goto state 34

State 34

	Command -> show ShowMode .                          (rule 18)

	if             reduce using rule 18
	show           reduce using rule 18
	'}'            reduce using rule 18


State 35

	ShowMode -> ident .                                 (rule 19)

	if             reduce using rule 19
	show           reduce using rule 19
	'}'            reduce using rule 19


State 36

	ShowMode -> string .                                (rule 20)

	if             reduce using rule 20
	show           reduce using rule 20
	'}'            reduce using rule 20


State 37

	Sentence -> if Status . "->" Command                (rule 16)
	Status -> Status . and Status                       (rule 25)
	Status -> Status . or Status                        (rule 26)

	and            shift, and enter state 47
	or             shift, and enter state 48
	"->"           shift, and enter state 49


State 38

	Status -> locked .                                  (rule 21)

	and            reduce using rule 21
	or             reduce using rule 21
	')'            reduce using rule 21
	"->"           reduce using rule 21


State 39

	Status -> unlocked .                                (rule 22)

	and            reduce using rule 22
	or             reduce using rule 22
	')'            reduce using rule 22
	"->"           reduce using rule 22


State 40

	Status -> '(' . Status ')'                          (rule 27)

	locked         shift, and enter state 38
	unlocked       shift, and enter state 39
	'('            shift, and enter state 40
	ident          shift, and enter state 41

	Status         goto state 46

State 41

	Status -> ident . is locked                         (rule 23)
	Status -> ident . is unlocked                       (rule 24)

	is             shift, and enter state 45


State 42

	Sentences -> Sentences Sentence .                   (rule 15)

	if             reduce using rule 15
	show           reduce using rule 15
	'}'            reduce using rule 15


State 43

	Declaration -> onuse '{' Sentences '}' .            (rule 11)

	unlock         reduce using rule 11
	elements       reduce using rule 11
	onuse          reduce using rule 11
	'}'            reduce using rule 11


State 44

	Declaration -> elements '{' Elements '}' .          (rule 10)

	unlock         reduce using rule 10
	elements       reduce using rule 10
	onuse          reduce using rule 10
	'}'            reduce using rule 10


State 45

	Status -> ident is . locked                         (rule 23)
	Status -> ident is . unlocked                       (rule 24)

	locked         shift, and enter state 54
	unlocked       shift, and enter state 55


State 46

	Status -> Status . and Status                       (rule 25)
	Status -> Status . or Status                        (rule 26)
	Status -> '(' Status . ')'                          (rule 27)

	and            shift, and enter state 47
	or             shift, and enter state 48
	')'            shift, and enter state 53


State 47

	Status -> Status and . Status                       (rule 25)

	locked         shift, and enter state 38
	unlocked       shift, and enter state 39
	'('            shift, and enter state 40
	ident          shift, and enter state 41

	Status         goto state 52

State 48

	Status -> Status or . Status                        (rule 26)

	locked         shift, and enter state 38
	unlocked       shift, and enter state 39
	'('            shift, and enter state 40
	ident          shift, and enter state 41

	Status         goto state 51

State 49

	Sentence -> if Status "->" . Command                (rule 16)

	show           shift, and enter state 33

	Command        goto state 50

State 50

	Sentence -> if Status "->" Command .                (rule 16)

	if             reduce using rule 16
	show           reduce using rule 16
	'}'            reduce using rule 16


State 51

	Status -> Status . and Status                       (rule 25)
	Status -> Status . or Status                        (rule 26)
	Status -> Status or Status .                        (rule 26)

	and            shift, and enter state 47
			(reduce using rule 26)

	or             shift, and enter state 48
			(reduce using rule 26)

	')'            reduce using rule 26
	"->"           reduce using rule 26


State 52

	Status -> Status . and Status                       (rule 25)
	Status -> Status and Status .                       (rule 25)
	Status -> Status . or Status                        (rule 26)

	and            shift, and enter state 47
			(reduce using rule 25)

	or             shift, and enter state 48
			(reduce using rule 25)

	')'            reduce using rule 25
	"->"           reduce using rule 25


State 53

	Status -> '(' Status ')' .                          (rule 27)

	and            reduce using rule 27
	or             reduce using rule 27
	')'            reduce using rule 27
	"->"           reduce using rule 27


State 54

	Status -> ident is locked .                         (rule 23)

	and            reduce using rule 23
	or             reduce using rule 23
	')'            reduce using rule 23
	"->"           reduce using rule 23


State 55

	Status -> ident is unlocked .                       (rule 24)

	and            reduce using rule 24
	or             reduce using rule 24
	')'            reduce using rule 24
	"->"           reduce using rule 24


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 28
Number of terminals: 23
Number of non-terminals: 12
Number of states: 56
